Started re-working of tile color randomisation.

--- a/core.css
+++ b/core.css
@@ -34,7 +34,7 @@ body {
 .blue2 { background-color:royalblue;color:white; }
 .blue2 a { color:lightskyblue; }
 .blue3 { background-color:dodgerblue;color:white; }
-.blue3 a { color:mediumblue; }
+.blue3 a { color:lightskyblue; }
 
 .green1 { background-color:green; color:white; }
 .green1 a { color:greenyellow; }
